opam-version: "2.0"
version: "dev"
name: "ledgerwallet-btc"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
license: "ISC"
synopsis: "Ledger wallet library for OCaml: Bitcoin app"
homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]
depends: [
  "dune" {>= "1.7"}
  "bitcoin"
  "ledgerwallet" {= version}
]
