opam-version: "2.0"
name: "ledgerwallet-btc"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
license: "ISC"
homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"
build:    [ "dune" "build"   "-p" name "-j" jobs ]
# run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "dune" {>= "2.4.0"}
  "bitcoin" {>= "2.0"}
  "ledgerwallet"
]
synopsis: "Ledger wallet library for OCaml: Bitcoin app"
