opam-version: "1.2"
name: "ledgerwallet-ssh-agent"
version: "dev"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
license: "ISC"
homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
dev-repo: "git://github.com/vbmithr/ocaml-ledger-wallet"

available: [
  ocaml-version >= "4.02.0"
]

build: [ "dune" "build" "-p" name "-j" jobs ]
build-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "dune" {build & >= "1.0"}
  "ledgerwallet" {= "dev"}
]
