opam-version: "2.0"
name: "ledgerwallet"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
license: "ISC"
homepage: "https://github.com/vbmithr/ocaml-ledger-wallet"
bug-reports: "https://github.com/vbmithr/ocaml-ledger-wallet/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-ledger-wallet"
doc: "https://vbmithr.github.io/ocaml-ledger-wallet/doc"
build:    [ "dune" "build"   "-p" name "-j" jobs ]
# run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.4.0"}
  "rresult" {>= "0.6.0"}
  "cstruct" {>= "6.0.0"}
  "hidapi-lwt" {>= "1.1.3"}
  "lwt" {>= "5.7.0"}
]
synopsis: "Ledger wallet library for OCaml"
description: """Library to communicate with Ledger hardware wallets
"""
